kubernetes/apps/base/vault/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: vault
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy
  hostnames:
    - vault.${INTERNAL_DOMAIN}
  rules:
    - backendRefs:
        - name: vault-active
          port: 8200
