kubernetes/apps/base/vault/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.${INTERNAL_DOMAIN}
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.${INTERNAL_DOMAIN}`)
      kind: Rule
      services:
        - name: vault-active
          scheme: https
          port: https
          serversTransport: vault-transport
  tls:
    secretName: vault-ingress-tls
